Make sure overflow is hidden

--- a/car.css
+++ b/car.css
@@ -12,6 +12,7 @@ canvas {
   position: absolute;
   top: 0;
   left: 0;
+  overflow: hidden;
 }
 
 .car {
